--- a/thesis/4-effects_in_practise.tex
+++ b/thesis/4-effects_in_practise.tex
@@ -119,11 +119,11 @@ Definiujemy efekt stanu z operacją jego odczytu oraz modyfikacji:
 
 \lstinputlisting[lastline=3]{code_examples/state1__basics.he}
 
-Efekt, jak i operacje są polimorficzne ze względu na typ wartości stanu. Zdefiniujemy teraz standardowy uchwyt dla efektu stanu. Skorzystamy z faktu, że uchwyty są w Helium wartościami, stąd w szczególności mogą być wynikiem funkcji. Funkcja ta będzie u nas parametryzowana wartością początkową stanu:
+Efekt, jak i operacje są parametryzowane typem wartości stanu. Zdefiniujemy teraz standardowy uchwyt dla efektu stanu. Skorzystamy z faktu, że uchwyty są w Helium wartościami, stąd w szczególności mogą być wynikiem funkcji. Funkcja ta będzie u nas parametryzowana wartością początkową stanu:
 
 \lstinputlisting[firstline=5, lastline=11]{code_examples/state1__basics.he}
 
-Gdy obliczenie się kończy, zamiast wartość zwracamy funkcję, która ignoruje argument (będzie nim bieżąca wartością stanu), a zwraca właściwy wynik obliczenia. W konsekwencji przypadki dla operacji też muszą być funkcjami. Dla \inl{put} nie musimy odczytywać aktualnej wartości stanu, stąd wartość tą ignorujemy. Obliczenie wznawiamy z wartością jednostkową. Jak jednak wiemy, wynikiem nie będzie zwykła wartość, lecz funkcja, której u nas dajemy wartość stanu. Stąd podajemy jej nowy stan, którym parametryzowana była operacja \inl{put}. W przypadku \inl{get} postępujemy podobnie -- jednak tym razem odczytamy argument funkcji i przekażemy go do kontynuacji. Niezmiennie kontynuacja zwraca funkcję, której przekażemy aktualną wartość stanu. Pozostaje rozstrzygnąć, co zrobić w przypadku \inl{finally}. Skoro jednak przerobiliśmy obliczenie ze zwracającego wartość do takiego, które zwraca funkcję oczekującą wartości stanu, to możemy podać mu wartość początkową -- określoną przez użytkownika uchwytu.
+Gdy obliczenie się kończy, zamiast wartość zwracamy funkcję, która ignoruje argument (będzie nim bieżąca wartością stanu), a zwraca właściwy wynik obliczenia. W konsekwencji przypadki dla operacji też muszą być funkcjami. Dla \inl{put} nie musimy odczytywać aktualnej wartości stanu, stąd wartość tą ignorujemy. Obliczenie wznawiamy z wartością jednostkową. Jak jednak wiemy, wynikiem nie będzie zwykła wartość, lecz funkcja. Podajemy jej nowy stan, którym parametryzowana była operacja \inl{put}. W przypadku \inl{get} postępujemy podobnie -- jednak tym razem odczytamy argument funkcji i przekażemy go do kontynuacji. Niezmiennie kontynuacja zwraca funkcję, której przekażemy aktualną wartość stanu. Pozostaje rozstrzygnąć, co zrobić w przypadku \inl{finally}. Skoro jednak przerobiliśmy obliczenie ze zwracającego wartość do takiego, które zwraca funkcję oczekującą wartości stanu, to możemy podać mu wartość początkową -- określoną przez użytkownika uchwytu.
 
 Jeśli chcemy, aby obliczenie zwracało nie tylko wartość wynikową, ale także końcowy stan, wystarczy że zmodyfikujemy przypadek dla \inl{return}:
 
