Fix columns vertical alignment

--- a/presentation/4-effects_in_practise.tex
+++ b/presentation/4-effects_in_practise.tex
@@ -1,7 +1,7 @@
 
 \begin{frame}
   \frametitle{}
-  \begin{columns}
+  \begin{columns}[t]
     \column{.4\paperwidth}
     Biblioteki:
     \begin{itemize}
@@ -44,7 +44,7 @@
 \begin{frame}
   \frametitle{Niedeterminizm}
   \lstinputlisting[linerange={1-2}]{nondet1__simple.he}
-  \begin{columns}
+  \begin{columns}[t]
     \column{.455\paperwidth}
     \lstinputlisting[linerange={4-7}]{nondet1__simple.he}
     \column{.455\paperwidth}
