--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -56,7 +56,7 @@
   morecomment=[l]{//},
   morecomment=[s]{(*}{*)},
   morestring=[b]",
-  basicstyle=\footnotesize\ttfamily,
+  basicstyle=\scriptsize\ttfamily,
   keywordstyle=\bf\ttfamily\color[rgb]{0,.3,.7},
   commentstyle=\color[rgb]{0.133,0.545,0.133},
   stringstyle={\color[rgb]{0.75,0.49,0.07}},
@@ -76,7 +76,7 @@
 
 \lstdefinestyle{Haleff-long}{
   language=Haleff,
-  basicstyle=\scriptsize\ttfamily
+  basicstyle=\tiny\ttfamily
 }
 
 \newcommand{\BSaLC}{,,Build systems {\`a} la carte''}
@@ -144,6 +144,8 @@
 
 
 \input{3-build_systems_a_la_carte}
+
+\input{5-build_systems_using_effects}
 
 
 
