Fixes after first pass of looking for spelling mistakes

--- a/presentation/1-introduction.tex
+++ b/presentation/1-introduction.tex
@@ -17,7 +17,7 @@
   \end{exampleblock}
   \begin{alertblock}{Wady}
     \begin{itemize}
-      \con zależność od świata zewnętrzengo
+      \con zależność od świata zewnętrznego
       \con utrudnione rozumienie, brak modularności
       \con częstsze pomyłki
     \end{itemize}
