Hide subsections in TOC

--- a/presentation/presentation.tex
+++ b/presentation/presentation.tex
@@ -126,7 +126,7 @@
 
 \begin{frame}
 \frametitle{Plan prezentacji}
-\tableofcontents
+\tableofcontents[hideallsubsections]
 \end{frame}
 
 \input{1-introduction}
