Add pauses where applicable

--- a/presentation/3-build_systems_a_la_carte.tex
+++ b/presentation/3-build_systems_a_la_carte.tex
@@ -36,11 +36,11 @@
   \begin{definition}[Minimalność]
     System kompilacji jest minimalny, gdy w trakcie budowania każde zadanie jest wykonane co najwyżej raz i tylko gdy w przechodnim domknięciu zadań, od których zależy, istnieje takie zadanie wejściowe, które zmieniło swoją wartość od czasu ostatniego budowania.
   \end{definition}
-
+  \pause
   \begin{example}
     Make jest minimalny
   \end{example}
-
+  \pause
   \begin{definition}[Wejście/zadanie wejściowe]
      Jeśli zadanie nie ma zdefiniowanego sposobu zbudowania, na przykład \textit{util.h} mówimy, że jest wejściem lub zadaniem wejściowym w tej konfiguracji.
   \end{definition}
