--- a/thesis/1-introduction.tex
+++ b/thesis/1-introduction.tex
@@ -1,31 +1,31 @@
-\chapter{Wprowadzenie}
+\chapter{Introduction}
 
-\section{Problemy z efektami ubocznymi}
+\section{Troubles with computational effects}
 
-Programy komputerowe, dzięki możliwości interakcji z zewnętrznymi zasobami takimi jak nośniki pamięci, sieci komputerowe czy użytkownicy oprogramowania, mogą robić istotnie więcej, niż tylko zadane wcześniej obliczenia. W ten sposób przebieg programu i jego wynik staje się jednak zależny od tegoż świata zewnętrznego, a sam program nie jest tylko serią czystych obliczeń, ale także towarzyszących im efektów ubocznych.
+Computer programs -- thanks to their ability to interact with external resources such as storage, computer networks or human users -- can do way more than just perform predefined computations. However, this causes their runtime behaviour to depend on the external world in which these resources live and makes the programs' not just sequences of pure computations but also accompanying side effects.
 
-Efekty uboczne powodują też, że rozumowanie i wnioskowanie o sposobie oraz prawidłowości działania programów staje się znacznie trudniejsze, a w konsekwencji ogranicza ich modularność i prowadzi do częstszych pomyłek ze strony autorów. Chcąc tego uniknąć, dąży się do wydzielania w programie jak największej części, która składa się z czystych obliczeń. Jednak to, czy jakiś moduł oprogramowania wykonuje obliczenia bez efektów ubocznych niekoniecznie jest jasne i często musimy zaufać autorowi, że w istocie tak jest.
+Moreover, computational effects make it substantially harder to understand and reason about programs' behaviour and their correctness which limits their modularity and leads to more frequent introduction of mistakes and bugs by the authors. To avoid such issues, it is often attempted to split the programs into pure and impure parts while minimising the size of the latter. Despite these efforts, it is not trivial to tell if certain module of a program performs only pure computations and we often have to resort to trusting the author that it is true indeed.
 
-\section{Radzenie sobie z efektami ubocznymi}
+\section{Dealing with computational effects}
 
-Jednym z rozwiązań tego problemu jest zawarcie informacji o posiadaniu efektów ubocznych w systemie typów. Możemy skorzystać wtedy z mechanizmów inferencji i weryfikacji typów do automatycznej identyfikacji funkcji, które nie są czyste -- dzięki temu programista może łatwo wyczytać z sygnatury funkcji, które z efektów występują w czasie jej działania. Znanym przykładem umieszczenia efektów w typach jest wykorzystanie monad w języku programowania Haskell. Niestety, jednoczesne użytkowanie dwóch niezależnych zasobów reprezentowanych przez różne monady nie jest łatwe i wymaga dodatkowych struktur, takich jak transformery monad, które niosą ze sobą dodatkowe wyzwania -- problem modularności został jedynie przesunięty w inny obszar.
+One of the methods of solving that problem is inserting information about side effects into the type system. We can then use mechanisms of type inference and verification for automatic identification of functions that are not pure -- making it easy for a programmer to tell, from the function's signature, which effects might appear during function's runtime. Well known example of such solution are monads in Haskell programming language. Unfortunately, concurrent use of two independent resources represented by different monads is non-trivial and requires additional structures, such as monad transformers, which bring in additional challenges -- the program of modularity has only been shifted into other space.
 
-Nowym, konkurencyjnym podejściem do ujarzmienia efektów ubocznych przez wykorzystanie systemu typów są efekty algebraiczne z uchwytami. Powierzchownie, zdają się być podobne do konstrukcji obsługi wyjątków w językach programowania lub wywołań systemowych w systemach operacyjnych. Dzięki rozdziałowi między definicjami operacji związanych z efektami ubocznymi a ich semantyką oraz interesującemu zastosowaniu kontynuacji, dają łatwość myślenia i wnioskowania o programach ich używających. Ponadto, w przeciwieństwie do monad, można bezproblemowo korzystać z wielu z nich jednocześnie.
+On the other hand, there is a new attempt to deal with side effects with the help of type systems called algebraic effects and handlers. From the surface, they seem similar to exceptions known in many programming languages or system calls in operating systems. However, due to the split between definitions of effectful operations and their semantics, and an interesting use of continuations, they give the programmer ease of thinking and reasoning about the programs using them. And in contrast to monads, multiple algebraic effects can be freely used at once.
 
-\section{Systemy kompilacji}
+\section{Build systems}
 
-Przykładem programów, których głównym zadaniem jest interakcja z zewnętrznymi zasobami są systemy kompilacji, w których użytkownik opisuje proces wytwarzania wyniku jako zbiór wzajemnie zależnych zadań wraz z informacją jak mają być one wykonywane w oparciu o wyniki innych zadań, zaś system jest odpowiedzialny za ich poprawne uporządkowanie i wykonanie. Ponadto, od systemu kompilacji oczekujemy, że będzie śledził zmiany w danych wejściowych i -- gdy poproszony o aktualizację wyników -- obliczał ponownie jedynie zadania, których wartości ulegną zmianie. Przykładami systemów kompilacji są Make oraz -- co może wydawać się zaskakujące -- programy biurowe służące do edycji arkuszy kalkulacyjnych (np. popularny Excel).
+To find a fine example of computer programs, whose main task is interaction with external resources, you can look no further than at build systems. There the user provides a set of mutually-depended tasks with information how to execute each of them by using results of other tasks, and the systems is responsible for their correct ordering and execution. Furthermore, we expect the build system to track changes in inputs and -- when asked to update the results -- rerun only the tasks whose output values will change. An examples of such systems are Make and -- which might seem surprising -- office applications for editing spreadsheets (such as popular Excel).
 
-W publikacjach pod tytułem \BSaLC{} \cite{mokhov2018build, mokhov2020build}, autorzy przedstawiają sposób klasyfikacji systemów kompilacji w oparciu o to, jak determinują one kolejność w jakiej zadania zostaną obliczone oraz jak wyznaczają, które z zadań wymagają ponownego obliczenia. Uzyskana klasyfikacja prowadzi autorów do skonstruowania platformy umożliwiającej definiowanie systemów kompilacji o oczekiwanych właściwościach. Platforma ta okazuje się być łatwa w implementacji w języku Haskell, a klasy typów Applicative oraz Monad odpowiadać mocy języka opisywania zależności między zadaniami do obliczenia.
+In recent publications titled \BSaLC{} \cite{mokhov2018build, mokhov2020build}, authors introduce a method of categorising build systems by taking into account how they determine order of task execution and in which way tasks are identified as requiring a rebuild. Presented categorisation leads the authors to introduction of a framework for creating build systems with expected properties which happens to be easily implementable in Haskell. What is more, it turns out that Applicative and Monad type classes correspond to the possible level of complexity of dependencies between tasks.
 
-\section{O tej pracy}
+\section{About this paper}
 
-Celem tej pracy jest zapoznanie czytelnika, który miał dotychczas kontakt z językiem Haskell oraz podstawami języków funkcyjnych, z nowatorskim rozwiązaniem jakim są efekty algebraiczne oraz zademonstrowanie -- idąc śladami Mokhov'a i innych -- implementacji systemów kompilacji z wykorzystaniem efektów algebraicznych i uchwytów w języku programowania Helium. W konsekwencji możliwe jest porównanie obu implementacji oraz zaobserwowanie jak wygląda programowanie z efektami algebraicznymi i uchwytami.
+This work aims to introduce the reader -- who has experience with Haskell and basics of functional programming languages -- to the innovative solution which are algebraic effects and handlers, and to demonstrate -- by following Mokhov et al -- an implementation of build systems using algebraic effects and handlers in a Helium programming language. As the result, it is possible to compare those two implementations, and to see how programming with algebraic effects and handlers looks like.
 
-W rozdziale drugim wprowadzony zostaje prosty i nieformalny model obliczeń wykorzystujący efekty algebraiczne i uchwyty. Zostaje przedstawionych kilka przykładów reprezentacji standardowych efektów ubocznych w opisanym modelu.
+In the second chapter, we introduce simple and informal model of calculations that uses algebraic effects and handlers. Some examples of representing standard computational effects in our model are described.
 
-Celem rozdziału trzeciego jest wprowadzenie do \BSaLC{}, opisanie obserwacji poczynionych przez autorów i przedstawienie abstrakcji systemów kompilacji oraz ich konsekwencji. Treść źródłowego artykułu jest opisana w sposób dostateczny, aby zrozumieć implementacje systemów z wykorzystaniem efektów i uchwytów przedstawione w rozdziale piątym. Zachęca się przy tym czytelnika do samodzielnego zapoznania się z całą treścią publikacji Mokhov'a i innych. Jest to pozycja interesująca i łatwa w lekturze.
+Chapter three serves as an introduction to \BSaLC{}, discussion of observations made be the authors and description of abstraction of build systems and their consequences. Contents of the source publication is presented on a level sufficient to understand implementation of build systems with algebraic effects and handlers in chapter five. At the same time, the reader is encouraged to get acquainted with full contents of the work by Mokhov et al because it is an interesting and easy to read publication.
 
-Rozdział czwarty rozpoczyna się zapoznaniem czytelnika z istniejącymi językami oraz bibliotekami umożliwiającymi programowanie z efektami i uchwytami. Następnie omówiony jest język Helium oraz przykładowe problemy wraz z programami je rozwiązującymi z użyciem efektów i uchwytów. Zademonstrowana jest ponadto łatwość wykorzystywania wielu efektów jednocześnie -- w bardziej przystępnej formie niż w przypadku monad w Haskellu.
+The fourth chapter begins with enumeration of existing programming languages and libraries that enable programming with algebraic effects and handlers. Next, the reader is introduced to the Helium programming language and presented with sample problems and their solutions that use effects and handlers. Moreover, use of multiple effects at the same time is demonstrated -- which is significantly easier than with monads in Haskell.
 
-Zwieńczeniem pracy jest rozdział piąty, w którym przedstawiona jest implementacja planistów, rekompilatorów oraz systemów kompilacji w sposób inspirowany wynikami \BSaLC{}, jednak używając języka z efektami algebraicznymi i uchwytami. Przedstawione są różnice między abstrakcyjnymi typami od których wyprowadza się implementację oraz w jaki sposób efekty i uchwyty wpływają na formę wyniku. Ponadto, pominięta zostaje implementacja jednego z planistów z wytłumaczeniem dlaczego ma to miejsce.
+Finally, the crowning fifth chapter contains implementations of schedulers, rebuilders and build systems inspired by the results of \BSaLC{}. However, this time in a programming language with algebraic effects and handlers. Presented are the differences between abstract types from which the implementations are derived, and how use of effects and handlers influence the final form. Showcased result is missing one of the schedulers, thus and explanation is provided why it is so.
